syntax = "proto3";
option csharp_namespace = "Pb.Geo.Service";
package geo;

service Geo {
  // Finds the hotels contained nearby the current lat/lon.
  rpc Nearby(GeoRequest) returns (GeoResult);
}

message GeoRequest {
  float lat = 1;
  float lon = 2;
}

message GeoResult {
  repeated string hotelIds = 1;
}
